[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "duba"
version = "1.0.0"
description = "Attemp of a neuron network with a mimic of the real neuron comportement"
readme = "README.md"
license = { file = "LICENSE", name = "XARTANIA License v1.2.1" }
authors = [{ name = "TsukiNi22" }]
requires-python = ">=3.8"

dependencies = [] #["numpy", "torch", ...]

keywords = ["duba", "neural-network", "neuron", "ai", "simulation", "biology-inspired"]

[project.urls]
Homepage = "https://github.com/TsukiNi22/banana_brain"
Repository = "https://github.com/TsukiNi22/banana_brain"
Issues = "https://github.com/TsukiNi22/banana_brain/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["duba*"]

[tool.duba]
main_class = "Duba"
license_version = "1.2.1"
